[gd_scene load_steps=5 format=3 uid="uid://sfs6k1cw6hjx"]

[ext_resource type="Script" uid="uid://virud0e5vbyb" path="res://Scripts/UI/main_menu.gd" id="1_i2xx2"]

[sub_resource type="Theme" id="Theme_48xlc"]
default_font_size = 55

[sub_resource type="Theme" id="Theme_1ehe0"]
default_font_size = 55

[sub_resource type="Theme" id="Theme_ce3w2"]
default_font_size = 55

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i2xx2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -130.0
offset_right = 200.0
offset_bottom = 370.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 2

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_48xlc")
text = "Start"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_1ehe0")
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_ce3w2")
text = "Quit"

[node name="TestPlace" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_ce3w2")
text = "TestPlace"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="VBoxContainer/TestPlace" to="." method="_on_test_place_pressed"]
